test-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  labels:
    app: test-client
    tier: testing
spec:
  containers:
  - name: test-client
    image: busybox:1.35
    command: ['sleep', '3600']
